# make-stub-files

./: .gitignore  .mypy.ini  LICENSE  MANIFEST.in  PKG-INFO.TXT  README.md  __init__.py  bug2.py  bug2a.py  bug3.py  example.cfg  leo-make-stub-files.cfg  make_stub_files-good.pyi  make_stub_files.cfg  make_stub_files.leo  make_stub_files.py  make_stub_files.pyi  msf.cfg  setup.cfg  test.cfg  test.py  theory.md  truncate.py  truncate.pyi
scripts/: wax_off.py
test/: __init__.py  test.py  test.pyi  test_Pattern_class.py  test_Stub_class.py  test_bug2_empty.py  test_bug2_non_empty.py  test_bug3.py  test_merge_types.py  test_msf.py  test_pattern_class.py  test_reduce_numbers.py  test_reduce_types.py  test_reducetypes.py  test_split_types.py  test_st_find_stub__find_parent_stub.py  test_st_flatten_stubs.py  test_st_merge_stubs.py  test_truncate.py
