[metadata]
name = make_stub_files-edreamleo
version = 1.0
author = Edward K Ream
author_email = edreamleo@gmail.com
description = make_stub_file: create stubs using patterns.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/edreamleo/make-stub-files
project_urls =
    Bug Tracker = https://github.com/edreamleo/make-stub-files/issues
classifiers =
	Programming Language :: Python :: 3.6
	License :: Public Domain
    Operating System :: OS Independent
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: Developers
	Topic :: Software Development

[options]
package_dir =
    # = src
# packages = find:
python_requires = >=3.6

# [options.packages.find]
# where = src